<resources>
    <string name="app_name">PruebaFirebase</string>
    <string name="auth_wellcome">Bienvenido</string>
    <string name="menu_main_sign_out">Cerrar sesión</string>
    <string name="finish_session">Sesión finalizada</string>
    <string name="auth_see_you">Hasta pronto</string>
    <string name="error_closing_session">No se pudo cerrar sesión</string>
    <string name="error_no_network">Sin red</string>
    <string name="error_code">Código del error:</string>
    <string name="activity_main_waiting_text">Espere un momento…</string>
    <string name="product_create">Crear</string>
    <string name="error_loading_data">Error al leer datos</string>
    <string name="hint_name">Nombre del Producto</string>
    <string name="hint_description">Descripción</string>
    <string name="hint_quantity">Cantidad</string>
    <string name="hint_price">Precio</string>
    <string name="add_product_dialog">Añadir producto</string>
    <string name="positive_button_dialog">Añadir</string>
    <string name="negative_button_dialog">Cancelar</string>
    <string name="product_added">Producto añadido</string>
    <string name="failure_product_add">Error al añadir el producto</string>
    <string name="error_deleting_data">Error al eliminar</string>
    <string name="product_updated">Producto modificado</string>
    <string name="failure_product_update">Error al modificar</string>
    <string name="imgButton_description">Botón de descargar imágenes</string>
    <string name="photo_preview_description">Previsualización de la foto</string>
    <string name="error_uploading_image">Error al subir la imagen</string>
</resources>